# rocket-reviewer

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  architecture.mermaid  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md  PLANNING.md  PRD.md  settings.local.json
.claude/commands/: build.md  commit.md  development.md  test.md
.claude/references/: code-style.md  project-architecture.md
.github/test-events/: comment-bot-loop.json  comment-developer-reply.json  comment-not-on-pr.json  pr-opened-non-main.json  pr-opened.json  pr-synchronize.json
.github/workflows/: ci.yml
docs/: PLANNING.md  PRD.md  SETUP.md
pipelines/: full_review.json
src/: __init__.py  aggregator.py  chunker.py  config.py  engine.py  errors.py  filters.py  github_client.py  main.py  models.py  pipeline.py  reviewer.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_chunker.py  test_config.py  test_engine.py  test_errors.py  test_filters.py  test_github_client.py  test_main.py  test_models.py  test_pipeline.py  test_reviewer.py
